checking for display: run-in

--- a/css-flex/display.html
+++ b/css-flex/display.html
@@ -10,9 +10,9 @@
     .box {
      text-align: center;
      box-shadow: 4px 4px 0 #0000001a;
-     width: 300px;
+     width: 400px;
      font-size: 50px;
-     border: 3px solid rgb(0, 17, 255);
+     border: 3px solid #0011ff;
    }
 
    .box1 {background-color: #001380}
@@ -24,17 +24,29 @@
    .box7 {background-color: #200ebd}
    .box8 {background-color: #00802b}
    .box9 {background-color: purple}
-   .box10 {background-color: #7e8000}
+   .box0 {background-color: #7e8000}
 
     .container {
-      display:  inline-block;
+      display: run-in;
+      /* display:  flex; */
       border: 5px solid red;
-      padding: 15px;
+      /* padding: 15px; */
       /* height: 100vh; */
-      /* width: 50px; */
+      /* width: 140px; */
       /* margin: 50% 10%; */
       color: rgb(132, 199, 8);
       background-color: darksalmon;
+    }
+    .container2 {
+      display: run-in;
+      /* display:  flex; */
+      border: 5px solid red;
+      /* padding: 15px; */
+      /* height: 100vh; */
+      /* width: 140px; */
+      /* margin: 50% 10%; */
+      color: rgb(132, 199, 8);
+      background-color: rgb(178, 122, 233);
     }
   </style>
 </head>
@@ -51,18 +63,20 @@
     <span class="box box7">7</span>
     <span class="box box8">8</span>
     <span class="box box9">9</span>
-    <span class="box box10">10</span>
+    <span class="box box0">0</span>
   </div>
-    <span class="box box1">1</span>
-    <span class="box box2">2</span>
-    <span class="box box3">3</span>
-    <span class="box box4">4</span>
-    <span class="box box5">5</span>
-    <span class="box box6">6</span>
-    <span class="box box7">7</span>
-    <span class="box box8">8</span>
-    <span class="box box9">9</span>
-    <span class="box box10">10</span>
+  <div class="container2">
+    <div class="box box1">1</div>
+    <div class="box box2">2</div>
+    <div class="box box3">3</div>
+    <div class="box box4">4</div>
+    <div class="box box5">5</div>
+    <div class="box box6">6</div>
+    <div class="box box7">7</div>
+    <div class="box box8">8</div>
+    <div class="box box9">9</div>
+    <div class="box box0">0</div>
+  </div>
 
 </body>
 
