texting for display: table

--- a/css-flex/display.html
+++ b/css-flex/display.html
@@ -27,12 +27,12 @@
    .box0 {background-color: #7e8000}
 
     .container {
-      display: run-in;
+      display: table;
       /* display:  flex; */
       border: 5px solid red;
       /* padding: 15px; */
       /* height: 100vh; */
-      /* width: 140px; */
+      width: 140px;
       /* margin: 50% 10%; */
       color: rgb(132, 199, 8);
       background-color: darksalmon;
