--- a/css-flex/display.html
+++ b/css-flex/display.html
@@ -9,7 +9,7 @@
   <style>
     .box {
      text-align: center;
-     box-shadow: 4px 4px 0 #0000001a;
+     box-shadow: 4px 4px 0 #201f021a;
      width: 400px;
      font-size: 50px;
      border: 3px solid #0011ff;
@@ -27,12 +27,11 @@
    .box0 {background-color: #7e8000}
 
     .container {
-      display: table;
-      /* display:  flex; */
+      display:  table-caption;
       border: 5px solid red;
-      /* padding: 15px; */
+      padding: 15px;
       /* height: 100vh; */
-      width: 140px;
+      /* width: 140px; */
       /* margin: 50% 10%; */
       color: rgb(132, 199, 8);
       background-color: darksalmon;
