flex-direction and its vlues

--- a/css-flex/display.html
+++ b/css-flex/display.html
@@ -10,7 +10,6 @@
     .box {
      text-align: center;
      box-shadow: 4px 4px 0 #201f021a;
-     width: 400px;
      font-size: 50px;
      border: 3px solid #0011ff;
    }
@@ -27,14 +26,10 @@
    .box0 {background-color: #7e8000}
 
     .container {
-      display:  table-caption;
+      display: flex;
       border: 5px solid red;
-      padding: 15px;
-      /* height: 100vh; */
-      /* width: 140px; */
-      /* margin: 50% 10%; */
-      color: rgb(132, 199, 8);
-      background-color: darksalmon;
+      flex-direction: inherit;
+      height: 100vh;
     }
   </style>
 </head>
@@ -42,16 +37,16 @@
 <body>
 
   <div class="container">
-    <span class="box box1">1</span>
-    <span class="box box2">2</span>
-    <span class="box box3">3</span>
-    <span class="box box4">4</span>
-    <span class="box box5">5</span>
-    <span class="box box6">6</span>
-    <span class="box box7">7</span>
-    <span class="box box8">8</span>
-    <span class="box box9">9</span>
-    <span class="box box0">0</span>
+    <div class="box box1">1</div>
+    <div class="box box2">2</div>
+    <div class="box box3">3</div>
+    <div class="box box4">4</div>
+    <div class="box box5">5</div>
+    <div class="box box6">6</div>
+    <div class="box box7">7</div>
+    <div class="box box8">8</div>
+    <div class="box box9">9</div>
+    <div class="box box0">0</div>
   </div>
 
 </body>
