working on flex values

--- a/css-flex/display.html
+++ b/css-flex/display.html
@@ -10,8 +10,10 @@
     .box {
      text-align: center;
      box-shadow: 4px 4px 0 #201f021a;
-     font-size: 50px;
+     font-size:80px;
      border: 3px solid #0011ff;
+     width: 300px;
+     margin: 10px;
    }
 
    .box1 {background-color: #001380}
@@ -27,8 +29,9 @@
 
     .container {
       display: flex;
+      flex-wrap: wrap;
       border: 5px solid red;
-      flex-direction: inherit;
+      flex-direction: column;
       height: 100vh;
     }
   </style>
