justify content and a little bit of order highlight

--- a/css-flex/display.html
+++ b/css-flex/display.html
@@ -10,10 +10,8 @@
     .box {
      text-align: center;
      box-shadow: 4px 4px 0 #201f021a;
-     /* font-size:80px; */
-     border: 3px solid #0011ff;
-     /* width: 300px;   */
-     order: 1
+     font-size: 50px;
+     color: white;
    }
 
    .box1 {background-color: #001380}
@@ -28,19 +26,16 @@
    .box0 {background-color: #7e8000}
 
     .container {
-      display: grid;
+      display: flex;
       /* flex-direction: column; */
       border: 5px solid red;
-      height: 100vh;
-    }
-    .box2 {
-      /* order: 2 */
-    }
-    .box5 {
-      order: inherit
-    }
-    .box6 {
-      /* order: 0 */
+      /* justify-content: space-around; */
+      /* justify-content: space-between; */
+      /* justify-content: space-evenly; */
+      /* justify-content: inherit; */
+      /* justify-content: flex-end; */
+      /* justify-content: flex-start; */
+      /* justify-content: center; */
     }
   </style>
 </head>
