--- a/css-flex/alignitems.html
+++ b/css-flex/alignitems.html
@@ -33,8 +33,8 @@
       /* flex-direction: row; */
       min-height: 100vh;
       flex-wrap: wrap;
-      /* align-content: center; */
-      align-items: center;
+      align-content: flex-end;
+      align-items: flex-end;
       /* justify-content: center; */
     }
     .box5 {
