--- a/css-flex/alignitems.html
+++ b/css-flex/alignitems.html
@@ -27,15 +27,23 @@
    .box0 {background-color: #7e8000}
 
     .container {
-      display: flex;
-      /* display: grid; */
+      /* display: flex; */
+      display: grid;
       border: 5px solid red;
       /* flex-direction: row; */
       min-height: 100vh;
-      flex-wrap: wrap;
-      align-content: flex-end;
-      align-items: flex-end;
+      /* flex-wrap: wrap; */
+      /* align-content: center */
+      align-items: center;
       /* justify-content: center; */
+    }
+    .box5 {
+      align-self: flex-end;
+      margin-top: auto;
+      margin-bottom: auto;
+    }
+    .box8 {
+      align-self: stretch
     }
     .box5 {
       /* font-size: 150px */
