Day 68 and 69 of #100daysofcode

--- a/css-flex/flex.html
+++ b/css-flex/flex.html
@@ -12,8 +12,7 @@
       box-shadow: 4px 4px 0 #201f021a;
       font-size: 30px;
       color: white;
-      /* width: 200px; */
-      flex: 1
+      width: 100px
     }
 
    .box1 {background-color: #001380}
@@ -30,6 +29,14 @@
     .container {
       display: flex;
       flex-grow: 1
+    }
+    .box5 {
+      /* flex-grow: 1 */
+      flex-shrink: 5
+    }
+    .box8 {
+      /* flex-grow: 4 */
+      flex-shrink: 1
     }
   </style>
 </head>
