--- a/css-flex/alignitems.html
+++ b/css-flex/alignitems.html
@@ -27,8 +27,8 @@
    .box0 {background-color: #7e8000}
 
     .container {
-      /* display: flex; */
-      display: grid;
+      display: flex;
+      /* display: grid; */
       border: 5px solid red;
       /* flex-direction: row; */
       min-height: 100vh;
@@ -40,7 +40,7 @@
     .box5 {
       align-self: flex-end;
       margin-top: auto;
-      margin-bottom: auto;
+      /* margin-bottom: auto; */
     }
     .box8 {
       align-self: stretch
