mixin and mixin with arguements

--- a/SCSS/index.html
+++ b/SCSS/index.html
@@ -12,28 +12,37 @@
 
   <div class="wrapper">
 
-    <header>
-      <h1 class="name">EM</h1>
-    </header>
-  
-    <section>
-
-      <div class="signUp">
-        <h2>Sign Up</h2>
-      </div>
-
-      <div class="data">
-        <div class="nameDiv">
-          <h3 class="name">Name</h3>
-          <input type="text" placeholder="name">
-        </div>
-        <div class="passwordDiv">
-          <h3 class="name">Password</h3>
-          <input type="text" placeholder="password">
-        </div>
-      </div>
-
+    <section class="intro">
+      <p>Hello,if you don't mind, may we get to know your name. Get to share this page with your friends and lways uploed your events for publicity. </p>
     </section>
+
+    <div class="line"></div>
+
+    <section class="card">
+      <header>
+        <h1 class="name">EM</h1>
+      </header>
+    
+      <section>
+  
+        <div class="signUp">
+          <h2>Sign Up</h2>
+        </div>
+  
+        <div class="data">
+          <div class="nameDiv">
+            <h3 class="name">Name</h3>
+            <input type="text" placeholder="name">
+          </div>
+          <div class="passwordDiv">
+            <h3 class="name">Password</h3>
+            <input type="text" placeholder="password">
+          </div>
+        </div>
+  
+      </section>
+    </section>
+
 
   </div>
 </body>
