removed the paragraph

--- a/SCSS/index.html
+++ b/SCSS/index.html
@@ -12,13 +12,6 @@
 
   <div class="wrapper">
 
-    <section class="intro">
-      <p>Hello,if you don't mind, may we get to know your name. Get to share this page with your friends and lways uploed your events for publicity. </p>
-    </section>
-
-    <div class="line"></div>
-
-    <section class="signup">
       <section class="card">
         <div class="signUp">
           <h2>Sign Up</h2>
@@ -26,18 +19,16 @@
         <div class="data">
           <div class="nameDiv">
             <h3 class="name">Name</h3>
-            <input type="text" placeholder="name">
+            <input type="text" >
           </div>
           <div class="passwordDiv">
             <h3 class="name">Password</h3>
-            <input type="text" placeholder="password">
+            <input type="text" >
           </div>
         </div>
       </section>
-    </section>
-    
+      <button>Submit</button>
     
   </div>
-  <button>Submit</button>
 </body>
 </html>
