editing the input tag

--- a/SCSS/index.html
+++ b/SCSS/index.html
@@ -19,16 +19,18 @@
         <div class="data">
           <div class="nameDiv">
             <h3 class="name">Name</h3>
-            <input type="text" >
+            <input type="text" placeholder="Password" class="input">
           </div>
           <div class="passwordDiv">
-            <h3 class="name">Password</h3>
-            <input type="text" >
+            <h3 class="password">Password</h3>
+            <input type="text" placeholder="Name">
           </div>
         </div>
       </section>
       <button>Submit</button>
     
   </div>
+
+  <script src="index.js"></script>
 </body>
 </html>
