good ui for  name and password

--- a/SCSS/index.html
+++ b/SCSS/index.html
@@ -14,16 +14,16 @@
 
       <section class="card">
         <div class="signUp">
-          <h2>Sign Up</h2>
+          <h2>SIGN UP</h2>
         </div>
         <div class="data">
-          <div class="nameDiv">
-            <h3 class="name">Name</h3>
-            <input type="text" placeholder="Password" class="input">
+          <div class="nameInput">
+            <div class="nameDiv"><h3 class="name">Name</h3></div>
+            <input type="text" placeholder="Password" class="inputName">
           </div>
-          <div class="passwordDiv">
-            <h3 class="password">Password</h3>
-            <input type="text" placeholder="Name">
+          <div class="passwordInput">
+            <div class="passwordDiv"><h3 class="password">Password</h3></div>
+            <input type="text" placeholder="Name" class="inputPassword">
           </div>
         </div>
       </section>
