--- a/SCSS/index.html
+++ b/SCSS/index.html
@@ -14,7 +14,7 @@
 
       <section class="card">
         <div class="signUp">
-          <h2>SIGN UP</h2>
+          <h2 class="font-effect-shadow-multiple">SIGN UP</h2>
         </div>
         <div class="data">
           <div class="nameInput">
