--- a/SCSS/index.html
+++ b/SCSS/index.html
@@ -22,12 +22,12 @@
             <input type="text" placeholder="Password" class="inputName">
           </div>
           <div class="passwordInput">
-            <div class="passwordDiv"><h3 class="password">Password</h3></div>
-            <input type="text" placeholder="Name" class="inputPassword">
+            <div class="passwordDiv"><h3 class="password" type="password" >Password</h3></div>
+            <input  placeholder="Name"type="password"  class="inputPassword">
           </div>
         </div>
       </section>
-      <button>Submit</button>
+      <button class="button">Submit</button>
     
   </div>
 
