removed the javascript and trying to add css functionality

--- a/SCSS/index.html
+++ b/SCSS/index.html
@@ -17,12 +17,12 @@
         </div>
         <div class="data">
           <div class="nameInput">
-            <div class="nameDiv"><h3 class="name">Name</h3></div>
-            <input type="text" placeholder="Password" class="inputName">
+            <h3 class="name">Name</h3>
+            <input type="text"  class="inputName">
           </div>
           <div class="passwordInput">
-            <div class="passwordDiv"><h3 class="password" type="password" >Password</h3></div>
-            <input  placeholder="Name"type="password"  class="inputPassword">
+            <h3 class="password" type="password" >Password</h3>
+            <input type="password"  class="inputPassword">
           </div>
         </div>
       </section>
@@ -30,6 +30,5 @@
     
   </div>
 
-  <script src="index.js"></script>
 </body>
 </html>
