edited the input tag

--- a/SCSS/index.html
+++ b/SCSS/index.html
@@ -13,19 +13,21 @@
 
       <section class="card">
         <div class="signUp">
-          <h2 class="font-effect-shadow-multiple">SIGN UP</h2>
+          <h1 class="font-effect-shadow-multiple">SIGN UP</h1>
         </div>
+
         <div class="data">
           <div class="inputDiv">
-              <input type="text"  required>
-              <div class="floating-label" >Name</div>
+              <input type="text" required>
+              <h3 class="floating-label">Name</h3>
           </div>
 
           <div class="inputDiv">
-              <input type="password"  required>
-              <span class="floating-label" type="password" >Password</span>
+              <input type="password" required>
+              <h3 class="floating-label" type="password" >Password</h3>
           </div>
         </div>
+
       </section>
       <button class="button">Submit</button>
     
