ediited th README file

--- a/Css/position.html
+++ b/Css/position.html
@@ -10,7 +10,6 @@
       margin: 0;
     }
     p {
-      height: 50px;
       background: olivedrab;
       margin: 0;
     }
@@ -18,6 +17,8 @@
       height: 50px;
       width: 50px;
       background: coral;
+      position: relative;
+      top: 150px
     }
     .div2 {
       height: 50px;
