--- a/Css/position.html
+++ b/Css/position.html
@@ -10,21 +10,21 @@
       margin: 0;
     }
     p {
-      background: olivedrab;
+      /* background: olivedrab; */
       margin: 0;
     }
-    .div1 {
-      height: 50px;
-      width: 50px;
-      background: coral;
-      position: relative;
-      top: 150px
+    .div1{
+      background: hotpink;
+      position: fixed;
+      top: 5px
     }
-    .div2 {
+    div {
       height: 50px;
       width: 50px;
       background: peru;
     }
+
+
   </style>
 </head>
 
@@ -34,5 +34,6 @@
     <div class="div1">div 1</div>
     <div class="div2">div 2</div>
   </section>
+  
 </body>
 </html>
