--- a/Css/position.html
+++ b/Css/position.html
@@ -10,7 +10,8 @@
       margin: 0;
     }
     p {
-      /* background: olivedrab; */
+      background: olivedrab;
+      height: 50px;
       margin: 0;
     }
     .div1{
@@ -30,6 +31,7 @@
 
 <body>
   <section>
+    <p>Hello, mr positioner</p>
     <p>Hello, mr positioner</p>
     <div class="div1">div 1</div>
     <div class="div2">div 2</div>
