--- a/Css/position.html
+++ b/Css/position.html
@@ -8,21 +8,30 @@
     body {
       padding: 0;
       margin: 0;
+      height: 1000px;
+    }
+    section {
+      margin: 100px 200px;
+      border: 1px solid red;
     }
     p {
       background: olivedrab;
       height: 50px;
       margin: 0;
     }
-    .div1{
-      background: hotpink;
-      position: fixed;
-      top: 5px
-    }
     div {
       height: 50px;
       width: 50px;
       background: peru;
+    }
+    p:nth-child(2) {
+      background: blue;
+    }
+    .div1 {
+      background: hotpink;;
+      position: absolute;
+      left: 50px;
+      top: 20px
     }
 
 
@@ -30,11 +39,13 @@
 </head>
 
 <body>
+  <div class="div1"> div 1</div>
+  
   <section>
-    <p>Hello, mr positioner</p>
-    <p>Hello, mr positioner</p>
-    <div class="div1">div 1</div>
-    <div class="div2">div 2</div>
+    <p>Hello, Mr positioner</p>
+    <p>Hi, Mrs positioner</p>
+    <div class="div1"> div 1</div>
+    <div> div 2 </div>
   </section>
   
 </body>
