--- a/Css/position.html
+++ b/Css/position.html
@@ -39,7 +39,9 @@
 </head>
 
 <body>
-  <div class="div1"> div 1</div>
+  <div>
+    <div class="div1"> div 1</div>
+  </div>
   
   <section>
     <p>Hello, Mr positioner</p>
