--- a/Css/position.html
+++ b/Css/position.html
@@ -30,8 +30,8 @@
     .div1 {
       background: hotpink;;
       position: absolute;
-      left: 50px;
-      top: 20px
+      /* left: 50px; */
+      /* top: 20px */
     }
 
 
@@ -39,9 +39,9 @@
 </head>
 
 <body>
-  <div>
-    <div class="div1"> div 1</div>
-  </div>
+  <span>
+    <div class="div"> div none</div>
+  </span>
   
   <section>
     <p>Hello, Mr positioner</p>
