added effect of top to position absolute

--- a/Css/position.html
+++ b/Css/position.html
@@ -27,11 +27,17 @@
     p:nth-child(2) {
       background: blue;
     }
-    .div1 {
-      background: hotpink;;
+    .div {
+      background: khaki;;
       position: absolute;
       /* left: 50px; */
-      /* top: 20px */
+      top: 20px
+    }
+    .div1 {
+      background: hotpink;;
+      position: fixed;
+      /* left: 50px; */
+      top: 20px
     }
 
 
