--- a/100daysR2/CSS/position-absolute.html
+++ b/100daysR2/CSS/position-absolute.html
@@ -20,9 +20,6 @@
       padding: 10px;
       background-color: crimson;
     }
-    section:nth-child(2) {
-      position: relative;
-    }
     h1 {
       height: 50px;
       width: 50px;
@@ -31,14 +28,18 @@
       font-size: 40px;
       color: antiquewhite
     }
-    div {
-      background-color: chocolate;
-    }
-    section:nth-child(2)  h1:nth-child(2) {
+    .div5 {
       background-color: tan;
       position: absolute;
       top: 20px;
       left: 1px;
+    }
+    div {
+      /* position: relative; */
+      background-color: yellowgreen;
+    }
+    section:nth-child(2) {
+      position: relative;
     }
   </style>
 </head>
@@ -53,7 +54,7 @@
   <section>
     <div>
       <h1>4</h1>
-      <h1>5</h1>
+      <h1 class="div5">5</h1>
       <h1>6</h1>
     </div>
   </section>
