--- a/100daysR2/CSS/position-fixed.html
+++ b/100daysR2/CSS/position-fixed.html
@@ -31,7 +31,7 @@
     section:nth-child(2) div:nth-child(2) {
       background: red;
       position: fixed;
-      top: 20px;
+      /* top: 20px; */
     }
   </style>
 </head>
