--- a/100daysR2/CSS/position-static.html
+++ b/100daysR2/CSS/position-static.html
@@ -26,7 +26,7 @@
     }
     section:nth-child(2) div:nth-child(2) {
       background: red;
-      /* position: static; */
+      position: static;
       top: 20px;
       left: 50px
     }
