--- a/100daysR2/CSS/position-sticky.html
+++ b/100daysR2/CSS/position-sticky.html
@@ -25,7 +25,7 @@
       margin: 2px;
       background: green;
       font-size: 40px;
-      color: antiquewhite
+      color: red
     }
 
     section:nth-child(2) div:nth-child(2) {
