--- a/100daysR2/CSS/position-sticky.html
+++ b/100daysR2/CSS/position-sticky.html
@@ -10,7 +10,7 @@
     body {
       margin: 0;
       height: 1000px;
-      background-color: azure;
+      background-color: red;
     }
 
     section {
