--- a/100daysR2/Booststrap/index.html
+++ b/100daysR2/Booststrap/index.html
@@ -7,39 +7,77 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
   <!-- Bootstrap CSS -->
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS"
-    crossorigin="anonymous">
+  <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS"
+    crossorigin="anonymous"> -->
+    
+    <link rel="stylesheet" href="../bootstrap-4.2.1-dist/css/bootstrap.min.css">
 
   <title>Hello, world!</title>
   <style> 
-    h1{
-      background-color: red
+    body {
+      border: 1px solid red;
+      margin: 0;
+      padding: 0
+    }
+    div {
+      background-color: lightblue;
+      border: 1px solid black;
+      font-size: 30px
     }
   </style>
 </head>
 
 <body>
   <div class="container">
-    <h1>Fixed container</h1>
+    <span>Fixed container</span>
   </div>
   <div class="container-fluid">
-    <h1>Fluid container</h1>
+    <span>Fluid container</span>
   </div>
+
   <div class="container">
-    <h1 class="row">
+    <div class="row">
       <div class="col-sm-6">col-sm-6</div>
-      <div class="col-ld-6">col-lg-6</div>
-    </h1>
+      <div class="col-sm-6">col-sm-6</div>
+    </div>
+    <div class="row">
+      <div class="col-md-6">col-md-6</div>
+      <div class="col-md-6">col-md-6</div>
+    </div>
+    <div class="row">
+      <div class="col-lg-6 col-sm-3">col-lg-6</div>
+      <div class="col-lg-6 col-sm-3">col-lg-6</div>
+    </div>
+    <div class="row">
+      <div class="col-lg-6 col-sm-3">col-lg-6</div>
+      <div class="col-lg-6 col-sm-3">col-lg-6</div>
+    </div>
+    <div class="row">
+      <div class="col-2 ">col-2</div>
+      <div class="col-2 ">col-2</div>
+      <div class="col-2 ">col-2</div>
+      <div class="col-2 ">col-2</div>
+      <div class="col-2 ">col-2</div>
+      <div class="col-2 ">col-2</div>
+      <div class="col-2 ">col-2</div>
+    </div>
   </div>
+
+
+
+
+
+
 
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+  <!-- <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
     crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut"
-    crossorigin="anonymous"></script>
+    crossorigin="anonymous"></script> 
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k"
-    crossorigin="anonymous"></script>
+    crossorigin="anonymous"></script>-->
+    <script src="../bootstrap-4.2.1-dist/js/bootstrap.min.js"></script>
 </body>
 
 </html>
