--- a/100daysR2/Booststrap/index.html
+++ b/100daysR2/Booststrap/index.html
@@ -35,32 +35,39 @@
     <span>Fluid container</span>
   </div>
 
-  <div class="container">
-    <div class="row">
-      <div class="col-sm-6">col-sm-6</div>
-      <div class="col-sm-6">col-sm-6</div>
+  <div class="container" style="background: red">
+    <div class="row justify-content-sm-center" style="background: green">
+      <div class="col-sm-3">col-sm-6</div>
+      <div class="col-sm-4">col-sm-6</div>
     </div>
-    <div class="row">
-      <div class="col-md-6">col-md-6</div>
-      <div class="col-md-6">col-md-6</div>
+  </div>
+
+  <div class="container" style="background-color: yellow">
+
+    <div class="row justify-content-md-center">
+      <div class="col col-lg-2">
+        1 of 3
+      </div>
+      <div class="col-md-auto">
+      Variable width content
+      </div>
+      <div class="col col-lg-2">
+        3 of 3
+      </div>
     </div>
+
     <div class="row">
-      <div class="col-lg-6 col-sm-3">col-lg-6</div>
-      <div class="col-lg-6 col-sm-3">col-lg-6</div>
+      <div class="col">
+        1 of 3
+      </div>
+      <div class="col-md-auto">
+        Variable width content
+      </div>
+      <div class="col col-lg-2">
+        3 of 3
+      </div>
     </div>
-    <div class="row">
-      <div class="col-lg-6 col-sm-3">col-lg-6</div>
-      <div class="col-lg-6 col-sm-3">col-lg-6</div>
-    </div>
-    <div class="row">
-      <div class="col-2 ">col-2</div>
-      <div class="col-2 ">col-2</div>
-      <div class="col-2 ">col-2</div>
-      <div class="col-2 ">col-2</div>
-      <div class="col-2 ">col-2</div>
-      <div class="col-2 ">col-2</div>
-      <div class="col-2 ">col-2</div>
-    </div>
+    
   </div>
 
 
