battled with grid-template-area

--- a/100daysR2/Grid/index.html
+++ b/100daysR2/Grid/index.html
@@ -21,7 +21,7 @@
     <div class="realtors">
       raltors
     </div>
-
+<!-- 
     <section class="features">
       features
     </section>
@@ -44,7 +44,7 @@
 
     <footer class="footer">
       footer
-    </footer>
+    </footer> -->
   </div>
 </body>
 </html>
