compltete grid-ara syntax

--- a/100daysR2/Grid/index.html
+++ b/100daysR2/Grid/index.html
@@ -25,26 +25,25 @@
     <section class="features">
       features
     </section>
-<!-- 
-    <div class="story_picture">
-      story
+  </div>
+
+  <div class="container2"> 
+
+    <div class="sidebar">
+      sidebar
     </div>
 
-    <div class="story_content">
-      story
+    <header class="header">
+      header
+    </header>
+
+    <div class="realtors">
+      raltors
     </div>
 
-    <div class="homes">
-      homes
-    </div>
-
-    <div class="galary">
-      galary
-    </div>
-
-    <footer class="footer">
-      footer
-    </footer> -->
+    <section class="features">
+      features
+    </section>
   </div>
 </body>
 </html>
