working on justify-items: stretch

--- a/100daysR2/Grid/index.html
+++ b/100daysR2/Grid/index.html
@@ -14,36 +14,18 @@
       sidebar
     </div>
 
-    <header class="header">
+    <div class="header">
       header
-    </header>
+    </div>
 
     <div class="realtors">
       raltors
     </div>
 
-    <section class="features">
+    <div class="features">
       features
-    </section>
-  </div>
-
-  <div class="container2"> 
-
-    <div class="sidebar">
-      sidebar
     </div>
 
-    <header class="header">
-      header
-    </header>
-
-    <div class="realtors">
-      raltors
-    </div>
-
-    <section class="features">
-      features
-    </section>
   </div>
 </body>
 </html>
