--- a/100daysR2/Grid/index.html
+++ b/100daysR2/Grid/index.html
@@ -8,24 +8,51 @@
 </head>
 <body>
   
-  <div class="container"> 
+  <div class="background"> 
+  
+  <div class="container1 container">
+    <div class="align_item">center</div>
+    <div class="align_item">center</div>
+    <div class="align_item">center</div>
+    <div class="align_item">center</div>
+  </div>
 
-    <div class="sidebar">
-      sidebar
-    </div>
+  <div class="container2 container">
+    <div class="align_item">end</div>
+    <div class="align_item">end</div>
+    <div class="align_item">end</div>
+    <div class="align_item">end</div>
+  </div>
 
-    <div class="header">
-      header
-    </div>
+  <div class="container3 container">
+    <div class="align_item">stretch</div>
+    <div class="align_item">stretch</div>
+    <div class="align_item">stretch</div>
+    <div class="align_item">stretch</div>
+  </div>
 
-    <div class="realtors">
-      raltors
-    </div>
+  <div class="container4 container">
+    <div class="align_item">space-between  </div>
+    <div class="align_item">space-between</div>
+    <div class="align_item">space-between</div>
+    <div class="align_item">space-between</div>
+  </div>
 
-    <div class="features">
-      features
-    </div>
+  <div class="container5 container">
+    <div class="align_item">start</div>
+    <div class="align_item">start</div>
+    <div class="align_item">start</div>
+    <div class="align_item">start</div>
+  </div>
+
+  <div class="container6 container">
+    <div class="align_item">space-around</div>
+    <div class="align_item">space-around</div>
+    <div class="align_item">space-around</div>
+    <div class="align_item">space-around</div>
+  </div>
 
   </div>
+
 </body>
 </html>
